--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
   "homepage": "https://github.com/omar199523/MERN-setup#readme",
   "devDependencies": {
     "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "nodemon": "^2.0.15",
     "prettier": "2.5.0"
   },
   "dependencies": {
     "concurrently": "^6.4.0",
     "config": "^3.3.6",
-    "eslint-config-airbnb": "^19.0.1",
     "express": "^4.17.1",
     "mongoose": "^6.0.14"
   }
