--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
-    // "workbench.iconTheme": "",
-    // "workbench.colorTheme": "",
-    "editor.formatOnSave": false,
+    "eslint.alwaysShowStatus": true,
+    "eslint.codeActionsOnSave.mode": "all",
+    "workbench.colorTheme": "One Dark Pro",
+    "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint":true 
+        "source.fixAll.eslint": true
     }
 }
